@startuml

  namespace ch.ffhs.drugstore {
    namespace domain.usecase {
      namespace management.signatures {
        interface ch.ffhs.drugstore.domain.usecase.UseCase {
                  {abstract} + execute()
              }
      }
    }
  }
  

  namespace ch.ffhs.drugstore {
    namespace domain.usecase {
      namespace management.signatures {
        class ch.ffhs.drugstore.domain.usecase.management.signatures.GetSignatures {
            + GetSignatures()
            + execute()
        }
      }
    }
  }
  

  ch.ffhs.drugstore.domain.usecase.management.signatures.GetSignatureDrug .up.|> ch.ffhs.drugstore.domain.usecase.UseCase
  ch.ffhs.drugstore.domain.usecase.management.signatures.GetSignatureDrug o-- ch.ffhs.drugstore.domain.service.SignatureService : signatureService
  ch.ffhs.drugstore.domain.usecase.management.signatures.GetSignatures .up.|> ch.ffhs.drugstore.domain.usecase.UseCase
  ch.ffhs.drugstore.domain.usecase.management.signatures.GetSignatures o-- ch.ffhs.drugstore.domain.service.SignatureService : signatureService


@enduml
